added label for battery leve

--- a/apps/client/src/app/features/alerts/pages/alerts-list/alerts-list.component.html
+++ b/apps/client/src/app/features/alerts/pages/alerts-list/alerts-list.component.html
@@ -19,7 +19,9 @@
             <i class="pi pi-bell text-blue-500 text-xl"></i>
           </div>
         </div>
-        <span class="text-green-500 font-medium">{{ item.batteryLevel }} </span>
+        <span class="text-green-500 font-medium"
+          >Battery {{ item.batteryLevel }}
+        </span>
         <span class="text-500"> - {{ item.createdAt | date }}</span>
       </div>
     </div>
