added % symbon on battery label

--- a/apps/client/src/app/features/alerts/pages/alerts-list/alerts-list.component.html
+++ b/apps/client/src/app/features/alerts/pages/alerts-list/alerts-list.component.html
@@ -20,7 +20,7 @@
           </div>
         </div>
         <span class="text-green-500 font-medium"
-          >Battery {{ item.batteryLevel }}
+          >Battery {{ item.batteryLevel }} %
         </span>
         <span class="text-500"> - {{ item.createdAt | date }}</span>
       </div>
